feat: implement swagger api documentation
